force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <label>Territory</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>