force-app/main/default/objects/Territory__c/fields/Account_owner__c.field-meta.xml
<CustomField>
    <fullName>Account_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>