force-app/main/default/objects/Territory__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <label>Account Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>