force-app/main/default/objects/Territory__c/fields/Field_to_compare__c.field-meta.xml
<CustomField>
    <fullName>Field_to_compare__c</fullName>
    <label>Field to compare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>