force-app/main/default/objects/Territory__c/fields/Opportunity_owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories1</relationshipName>
    <type>Lookup</type>
</CustomField>