force-app/main/default/objects/Territory__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>NSW / ACT / QLD</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>VIC / QLD</fullName>
            </value>
            <value>
                <fullName>QLD / SA / WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>