force-app/main/default/objects/Territory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Eg: If zip code is alphanumeric then select type as &quot;Comma separated&quot; else &quot;Range&quot;</description>
    <inlineHelpText>Eg: If zip code is alphanumeric then select type as &quot;Comma separated&quot; else &quot;Range&quot;</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Comma separated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>