force-app/main/default/objects/Territory__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <inlineHelpText>If the type is range please add values as eg: &quot;12345-76589&quot; else add it as &quot;1254,87976,99654&quot;</inlineHelpText>
    <label>Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>